dist_man1_MANS=

if BUILD_BITELONCOIND
  dist_man1_MANS+=biteloncoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=biteloncoin-qt.1
endif

if BUILD_BITELONCOIN_CLI
  dist_man1_MANS+=biteloncoin-cli.1
endif

if BUILD_BITELONCOIN_TX
  dist_man1_MANS+=biteloncoin-tx.1
endif

if BUILD_BITELONCOIN_UTIL
  dist_man1_MANS+=biteloncoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITELONCOIN_WALLET
  dist_man1_MANS+=biteloncoin-wallet.1
endif
endif
